complete updatting user
