# docs/swagger.yaml
@@ -179,4 +179,56 @@ paths:
                 type: string
       tags:
       - auth
-
+  /driver:
+    put:     
+      consumes:
+      - application/json
+      parameters:
+      - description: Info to update
+        in: body
+        name: input
+        required: true
+        schema:
+          type: object
+          properties:
+            name:
+              type: string
+            phone_number:
+              type: string
+            email:
+              type: string     
+      produces:
+      - application/json
+      responses:
+        '200':
+          description: OK
+        "400":
+          description: Driver does not exist
+          schema:
+            type: object
+            properties:
+              error: 
+                type: string
+        "401":
+          description: Token expired
+          schema:
+            type: object
+            properties:
+              error: 
+                type: string
+        "403":
+          description: Incorrect token
+          schema:
+            type: object
+            properties:
+              error: 
+                type: string
+        "500":
+          description: Unexpected server error
+          schema:
+            type: object
+            properties:
+              error: 
+                type: string
+      tags:
+        - driver
